; ModuleID = '/home/carl/AnghaBench/libuv/src/win/extr_winsock.c_error_means_no_support.c'
source_filename = "/home/carl/AnghaBench/libuv/src/win/extr_winsock.c_error_means_no_support.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WSAEPROTONOSUPPORT = common dso_local global i64 0, align 8
@WSAESOCKTNOSUPPORT = common dso_local global i64 0, align 8
@WSAEPFNOSUPPORT = common dso_local global i64 0, align 8
@WSAEAFNOSUPPORT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @error_means_no_support to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @error_means_no_support(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @WSAEPROTONOSUPPORT, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %18, label %6

6:                                                ; preds = %1
  %7 = load i64, i64* %2, align 8
  %8 = load i64, i64* @WSAESOCKTNOSUPPORT, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %18, label %10

10:                                               ; preds = %6
  %11 = load i64, i64* %2, align 8
  %12 = load i64, i64* @WSAEPFNOSUPPORT, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %18, label %14

14:                                               ; preds = %10
  %15 = load i64, i64* %2, align 8
  %16 = load i64, i64* @WSAEAFNOSUPPORT, align 8
  %17 = icmp eq i64 %15, %16
  br label %18

18:                                               ; preds = %14, %10, %6, %1
  %19 = phi i1 [ true, %10 ], [ true, %6 ], [ true, %1 ], [ %17, %14 ]
  %20 = zext i1 %19 to i32
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
